# opp-lab1

./: CMakeLists.txt  README.md
Dialoge/: CMakeLists.txt
Dialoge/source/: main.cpp
Input/: CMakeLists.txt
Input/include/: input.h
Input/source/: input.cpp
Part/: CMakeLists.txt
Part/include/: Part.h
Part/source/: Part.cpp
Process/: CMakeLists.txt
Process/include/: process.h
Process/source/: process.cpp
Tests/: CMakeLists.txt
Tests/source/: Test.cpp
